# py_package_scratchpad

./: .gitignore  README.md  pyproject.toml  requirements.txt
dev/: dot_notation_test.py  learn_path_utils.py  learn_path_utils.test.py  logging_demo.py  os_system_test.py  string_color_test.py  test_logging_unit_test.py
dev/json_files/: data.json  out.json
dev/learn_class_methods/: learn_class_methods.py  nested_class_trying.py  package_demo_exec.py
dev/learn_class_methods/package_demo/: __init__.py
dev/learn_dict/: dict_tutorial.py
pytest/: test_pytest_demo.py
sqlite/: alchemy_client_only.py  alchemy_v0.py  alchemy_v0.test.py  demo.db
ssh_clients/paramiko/: paramiko_demo_test.py
yaml_modules/: business_sample.yml  sample.yml
yaml_modules/yaml_demo/: buisiness_yaml_test.py  d_yaml.json  directive_parser_target.py  test_dataclass.sample.json  yaml_demo_test.py
