#https://docs.pytest.org/en/latest/how-to/logging.html#live-logs
[tool.pytest.ini_options]
#log_file="example.log" # actually file
#log_file_level = "DEBUG"

#log_cli_level = "DEBUG" # DEBUG INFO WARNING ERROR CRITICAL
log_cli_level = "WARNING" # DEBUG INFO WARNING ERROR CRITICAL
log_cli = true # works, but to cli... obv



#log_cli_format = %(asctime)s %(levelname)s %(message)s

#[pytest]
#log_cli = true
[tool.poetry]
name = "py-package-scratchpad"
version = "0.0.1"
description = "Learning Python and Documenting"
authors = ["JC <jchan48@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "py_package_scratchpad"}]

[tool.poetry.dependencies]
python = "^3.10"
SQLAlchemy = "^2.0.6"
PyYAML = "^6.0"
dotty-dict = "^1.3.1"
paramiko = "^3.1.0"
string-color = "^1.2.3"

[tool.poetry.dev-dependencies]
pytest = "^7.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
